--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "version": "0.0.0",
-  "private": true,
   "name": "angular-phonecat",
+  "version": "0.0.0",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "description": "A tutorial application for AngularJS",
   "repository": "https://github.com/nowordforfree/angular-phonecat",
   "license": "MIT",
@@ -15,12 +19,16 @@
     "angular-animate": ">=1.4.0"
   },
   "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": ">=5.0.0",
+    "babel-preset-es2015": "^6.6.0",
     "http-server": ">=0.6.1",
+    "shelljs": ">=0.2.6",
     "tmp": ">=0.0.23",
-    "shelljs": ">=0.2.6"
+    "webpack": ">=1.8.11"
   },
   "scripts": {
-    "prestart": "npm install",
+    "prestart": "npm install && webpack",
     "start": "http-server -a 0.0.0.0 -p 8000"
   }
 }
