--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
+    "babel-eslint": "^5.0.0",
     "babel-loader": ">=5.0.0",
     "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.2.0",
     "http-server": ">=0.6.1",
     "shelljs": ">=0.2.6",
     "tmp": ">=0.0.23",
